[gd_scene load_steps=33 format=3 uid="uid://cwn8ea14mrre7"]

[ext_resource type="Script" uid="uid://53q7t8vghnaf" path="res://scenes/gui/title_screen.gd" id="1_yma5w"]
[ext_resource type="Texture2D" uid="uid://c0lq5tk6dqhnl" path="res://assets/sprites/backgrounds/title_screen.png" id="2_bwpea"]
[ext_resource type="Texture2D" uid="uid://d0u5lbxbnnbfv" path="res://assets/sprites/icons/button_icon.png" id="3_xcgv5"]
[ext_resource type="Texture2D" uid="uid://6bop0dma8rjf" path="res://assets/sprites/icons/title_letters/c.png" id="4_44og4"]
[ext_resource type="Texture2D" uid="uid://hcnuh7cuvxmo" path="res://assets/sprites/icons/title_letters/r.png" id="5_so78k"]
[ext_resource type="Texture2D" uid="uid://d0d6lhfm82jff" path="res://assets/sprites/icons/title_letters/u.png" id="6_vfbrp"]
[ext_resource type="Texture2D" uid="uid://s1jkthxcwdln" path="res://assets/sprites/icons/title_letters/x.png" id="7_mki1h"]
[ext_resource type="PackedScene" uid="uid://ild61ihsg08f" path="res://scenes/gui/settings_screen.tscn" id="8_so78k"]
[ext_resource type="Script" uid="uid://cdvms1oskvejd" path="res://scenes/gui/constellations/star.gd" id="9_vfbrp"]
[ext_resource type="Script" uid="uid://bvhi3nofh04qx" path="res://scenes/gui/constellations/line.gd" id="10_mki1h"]

[sub_resource type="Animation" id="Animation_44og4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("c:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-52, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("r:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-15, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("u:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(19, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("x:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(52, -16)]
}

[sub_resource type="Animation" id="Animation_lvqmm"]
resource_name = "idle"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("c:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4.023592, 5.023592, 6.023592, 7.023592, 8.047184),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-52, 0), Vector2(-52, -8), Vector2(-52, 0), Vector2(-52, 8), Vector2(-52, 0), Vector2(-52, -8), Vector2(-52, 0), Vector2(-52, 8), Vector2(-52, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("r:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.0180119, 1.9990053, 3, 4.0350294, 5.053041, 5.0715504, 6.0525436, 7.0535383, 8.088568, 9.106579),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-15, 0), Vector2(-15, -8), Vector2(-15, 0), Vector2(-15, 8), Vector2(-15, 0), Vector2(-15, 0), Vector2(-15, -8), Vector2(-15, 0), Vector2(-15, 8), Vector2(-15, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("u:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.0082476, 3.0123715, 4.032434, 5.0365577, 6.024743, 6.0406814, 7.0448055, 8.064868, 9.068992, 10.057177),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(19, 0), Vector2(19, -8), Vector2(19, 0), Vector2(19, -8), Vector2(19, 0), Vector2(19, 0), Vector2(19, -8), Vector2(19, 0), Vector2(19, -8), Vector2(19, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("x:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3, 4.007714, 5.007212, 6, 7.0116105, 7.0278697, 8.0355835, 9.035082, 10.02787, 11.03948),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(52, -16), Vector2(52, -24), Vector2(52, -16), Vector2(52, -8), Vector2(52, -16), Vector2(52, -16), Vector2(52, -24), Vector2(52, -16), Vector2(52, -8), Vector2(52, -16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rbxo2"]
_data = {
&"RESET": SubResource("Animation_44og4"),
&"idle": SubResource("Animation_lvqmm")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bwpea"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xcgv5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rprdc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_msh13"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_avmqa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_44og4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_so78k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vfbrp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mki1h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lvqmm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rbxo2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_it6vo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3kft2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7v78q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lnu1g"]

[sub_resource type="Animation" id="Animation_rprdc"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("top:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(736, 256)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("top:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("top:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.1254902, 0.03137255, 0.08627451, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bottom:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.1254902, 0.03137255, 0.08627451, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("bottom:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(736, 256)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("bottom:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 256)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("left:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.1254902, 0.03137255, 0.08627451, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("left:size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(160, 512)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("left:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("right:color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.1254902, 0.03137255, 0.08627451, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("right:size")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(160, 512)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("right:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 0)]
}

[sub_resource type="Animation" id="Animation_bwpea"]
resource_name = "opening"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(480, 512), Vector2(112, 328)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("left:size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(256, 328), Vector2(112, 328)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("bottom:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 192), Vector2(0, 328)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bottom:size")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(736, 320), Vector2(512, 104)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("top:size")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(736, 256), Vector2(512, 80)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("right:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(256, 0), Vector2(400, 0)]
}

[sub_resource type="Animation" id="Animation_xcgv5"]
resource_name = "start"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_msh13"]
_data = {
&"RESET": SubResource("Animation_rprdc"),
&"opening": SubResource("Animation_bwpea"),
&"start": SubResource("Animation_xcgv5")
}

[node name="title_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yma5w")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bwpea")

[node name="stars" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StarLine" type="Node2D" parent="stars" node_paths=PackedStringArray("node_a", "node_b")]
position = Vector2(72, 48)
script = ExtResource("10_mki1h")
node_a = NodePath("../Star")
node_b = NodePath("../Star2")
metadata/_custom_type_script = "uid://bvhi3nofh04qx"

[node name="StarLine2" type="Node2D" parent="stars" node_paths=PackedStringArray("node_a", "node_b")]
position = Vector2(56, 88)
script = ExtResource("10_mki1h")
node_a = NodePath("../Star2")
node_b = NodePath("../Star3")
metadata/_custom_type_script = "uid://bvhi3nofh04qx"

[node name="StarLine3" type="Node2D" parent="stars" node_paths=PackedStringArray("node_a", "node_b")]
position = Vector2(80, 144)
script = ExtResource("10_mki1h")
node_a = NodePath("../Star3")
node_b = NodePath("../Star4")
metadata/_custom_type_script = "uid://bvhi3nofh04qx"

[node name="StarLine4" type="Node2D" parent="stars" node_paths=PackedStringArray("node_a", "node_b")]
position = Vector2(128, 128)
script = ExtResource("10_mki1h")
node_a = NodePath("../Star4")
node_b = NodePath("../Star5")
metadata/_custom_type_script = "uid://bvhi3nofh04qx"

[node name="StarLine5" type="Node2D" parent="stars" node_paths=PackedStringArray("node_a", "node_b")]
position = Vector2(80, 144)
script = ExtResource("10_mki1h")
node_a = NodePath("../Star3")
node_b = NodePath("../Star6")
metadata/_custom_type_script = "uid://bvhi3nofh04qx"

[node name="StarLine6" type="Node2D" parent="stars" node_paths=PackedStringArray("node_a", "node_b")]
position = Vector2(56, 216)
script = ExtResource("10_mki1h")
node_a = NodePath("../Star6")
node_b = NodePath("../Star7")
metadata/_custom_type_script = "uid://bvhi3nofh04qx"

[node name="StarLine7" type="Node2D" parent="stars" node_paths=PackedStringArray("node_a", "node_b")]
position = Vector2(104, 232)
script = ExtResource("10_mki1h")
node_a = NodePath("../Star7")
node_b = NodePath("../Star8")
metadata/_custom_type_script = "uid://bvhi3nofh04qx"

[node name="StarLine8" type="Node2D" parent="stars" node_paths=PackedStringArray("node_a", "node_b")]
position = Vector2(464, 56)
script = ExtResource("10_mki1h")
node_a = NodePath("../Star9")
node_b = NodePath("../Star10")
metadata/_custom_type_script = "uid://bvhi3nofh04qx"

[node name="StarLine9" type="Node2D" parent="stars" node_paths=PackedStringArray("node_a", "node_b")]
position = Vector2(408, 64)
script = ExtResource("10_mki1h")
node_a = NodePath("../Star10")
node_b = NodePath("../Star11")
metadata/_custom_type_script = "uid://bvhi3nofh04qx"

[node name="StarLine10" type="Node2D" parent="stars" node_paths=PackedStringArray("node_a", "node_b")]
position = Vector2(432, 112)
script = ExtResource("10_mki1h")
node_a = NodePath("../Star11")
node_b = NodePath("../Star12")
metadata/_custom_type_script = "uid://bvhi3nofh04qx"

[node name="StarLine11" type="Node2D" parent="stars" node_paths=PackedStringArray("node_a", "node_b")]
position = Vector2(408, 144)
script = ExtResource("10_mki1h")
node_a = NodePath("../Star12")
node_b = NodePath("../Star13")
metadata/_custom_type_script = "uid://bvhi3nofh04qx"

[node name="StarLine12" type="Node2D" parent="stars" node_paths=PackedStringArray("node_a", "node_b")]
position = Vector2(408, 144)
script = ExtResource("10_mki1h")
node_a = NodePath("../Star12")
node_b = NodePath("../Star14")
metadata/_custom_type_script = "uid://bvhi3nofh04qx"

[node name="StarLine14" type="Node2D" parent="stars" node_paths=PackedStringArray("node_a", "node_b")]
position = Vector2(309.0063, 208.60574)
script = ExtResource("10_mki1h")
node_a = NodePath("../Star15")
node_b = NodePath("../Star16")
metadata/_custom_type_script = "uid://bvhi3nofh04qx"

[node name="StarLine15" type="Node2D" parent="stars" node_paths=PackedStringArray("node_a", "node_b")]
position = Vector2(328.65897, 224.23851)
script = ExtResource("10_mki1h")
node_a = NodePath("../Star16")
node_b = NodePath("../Star17")
metadata/_custom_type_script = "uid://bvhi3nofh04qx"

[node name="Star" type="Node2D" parent="stars"]
position = Vector2(72, 48)
script = ExtResource("9_vfbrp")
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star2" type="Node2D" parent="stars"]
position = Vector2(56, 88)
script = ExtResource("9_vfbrp")
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star3" type="Node2D" parent="stars"]
position = Vector2(80, 144)
script = ExtResource("9_vfbrp")
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star4" type="Node2D" parent="stars"]
position = Vector2(128, 128)
script = ExtResource("9_vfbrp")
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star5" type="Node2D" parent="stars"]
position = Vector2(112, 184)
script = ExtResource("9_vfbrp")
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star6" type="Node2D" parent="stars"]
position = Vector2(56, 216)
script = ExtResource("9_vfbrp")
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star7" type="Node2D" parent="stars"]
position = Vector2(104, 232)
script = ExtResource("9_vfbrp")
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star8" type="Node2D" parent="stars"]
position = Vector2(40, 280)
script = ExtResource("9_vfbrp")
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star9" type="Node2D" parent="stars"]
position = Vector2(464, 56)
script = ExtResource("9_vfbrp")
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star10" type="Node2D" parent="stars"]
position = Vector2(408, 64)
script = ExtResource("9_vfbrp")
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star11" type="Node2D" parent="stars"]
position = Vector2(432, 112)
script = ExtResource("9_vfbrp")
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star12" type="Node2D" parent="stars"]
position = Vector2(408, 144)
script = ExtResource("9_vfbrp")
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star13" type="Node2D" parent="stars"]
position = Vector2(376.31635, 181.42749)
script = ExtResource("9_vfbrp")
speed = 0.1
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star14" type="Node2D" parent="stars"]
position = Vector2(456.90686, 185.1628)
script = ExtResource("9_vfbrp")
speed = 0.1
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star15" type="Node2D" parent="stars"]
position = Vector2(309.0063, 208.60574)
script = ExtResource("9_vfbrp")
speed = 0.1
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star16" type="Node2D" parent="stars"]
position = Vector2(328.65897, 224.23851)
script = ExtResource("9_vfbrp")
speed = 0.1
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star17" type="Node2D" parent="stars"]
position = Vector2(269.2144, 273.8278)
script = ExtResource("9_vfbrp")
speed = 0.1
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star18" type="Node2D" parent="stars"]
position = Vector2(200, 48)
script = ExtResource("9_vfbrp")
speed = 0.1
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star19" type="Node2D" parent="stars"]
position = Vector2(384, 280)
script = ExtResource("9_vfbrp")
speed = 0.1
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star20" type="Node2D" parent="stars"]
position = Vector2(120, 288)
script = ExtResource("9_vfbrp")
speed = 0.1
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="Star21" type="Node2D" parent="stars"]
position = Vector2(472, 256)
script = ExtResource("9_vfbrp")
speed = 0.1
metadata/_custom_type_script = "uid://cdvms1oskvejd"

[node name="title" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 80.0
offset_bottom = 120.0
grow_horizontal = 2

[node name="c" type="TextureRect" parent="title"]
layout_mode = 0
offset_left = -52.0
offset_right = -12.0
offset_bottom = 40.0
texture = ExtResource("4_44og4")

[node name="r" type="TextureRect" parent="title"]
layout_mode = 0
offset_left = -15.0
offset_right = 25.0
offset_bottom = 40.0
texture = ExtResource("5_so78k")

[node name="u" type="TextureRect" parent="title"]
layout_mode = 0
offset_left = 19.0
offset_right = 59.0
offset_bottom = 40.0
texture = ExtResource("6_vfbrp")

[node name="x" type="TextureRect" parent="title"]
layout_mode = 0
offset_left = 52.0
offset_top = -16.0
offset_right = 124.0
offset_bottom = 56.0
texture = ExtResource("7_mki1h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="title"]
libraries = {
&"": SubResource("AnimationLibrary_rbxo2")
}
autoplay = "idle"

[node name="start" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 160.0
offset_right = 320.0
offset_bottom = 208.0
theme_override_colors/font_color = Color(0.2509804, 0.21176471, 0.2901961, 1)
theme_override_colors/font_focus_color = Color(0.2509804, 0.21176471, 0.2901961, 1)
theme_override_colors/font_hover_color = Color(0.6156863, 0.68235296, 0.7529412, 1)
theme_override_colors/font_hover_pressed_color = Color(0.6156863, 0.68235296, 0.7529412, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_bwpea")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xcgv5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rprdc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_msh13")
theme_override_styles/focus = SubResource("StyleBoxEmpty_avmqa")
text = "start"
alignment = 0

[node name="icon" type="TextureRect" parent="start"]
visible = false
layout_mode = 0
offset_left = -20.0
offset_top = 12.0
offset_right = -10.0
offset_bottom = 22.0
scale = Vector2(2, 2)
texture = ExtResource("3_xcgv5")

[node name="options" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 208.0
offset_right = 320.0
offset_bottom = 256.0
theme_override_colors/font_color = Color(0.2509804, 0.21176471, 0.2901961, 1)
theme_override_colors/font_focus_color = Color(0.2509804, 0.21176471, 0.2901961, 1)
theme_override_colors/font_hover_color = Color(0.6156863, 0.68235296, 0.7529412, 1)
theme_override_colors/font_hover_pressed_color = Color(0.6156863, 0.68235296, 0.7529412, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_44og4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_so78k")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vfbrp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mki1h")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lvqmm")
text = "options"
alignment = 0

[node name="icon" type="TextureRect" parent="options"]
visible = false
layout_mode = 0
offset_left = -20.0
offset_top = 12.0
offset_right = -10.0
offset_bottom = 22.0
scale = Vector2(2, 2)
texture = ExtResource("3_xcgv5")

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 256.0
offset_right = 320.0
offset_bottom = 304.0
theme_override_colors/font_color = Color(0.2509804, 0.21176471, 0.2901961, 1)
theme_override_colors/font_focus_color = Color(0.2509804, 0.21176471, 0.2901961, 1)
theme_override_colors/font_hover_color = Color(0.6156863, 0.68235296, 0.7529412, 1)
theme_override_colors/font_hover_pressed_color = Color(0.6156863, 0.68235296, 0.7529412, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_rbxo2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_it6vo")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3kft2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7v78q")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lnu1g")
text = "exit"
alignment = 0

[node name="icon" type="TextureRect" parent="exit"]
visible = false
layout_mode = 0
offset_left = -20.0
offset_top = 12.0
offset_right = -10.0
offset_bottom = 22.0
scale = Vector2(2, 2)
texture = ExtResource("3_xcgv5")

[node name="settings_screen" parent="." instance=ExtResource("8_so78k")]
visible = false
layout_mode = 1

[node name="covers" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="top" type="ColorRect" parent="covers"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 224.0
offset_bottom = 256.0
grow_horizontal = 2
color = Color(0.1254902, 0.03137255, 0.08627451, 1)

[node name="bottom" type="ColorRect" parent="covers"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -72.0
offset_right = 224.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.1254902, 0.03137255, 0.08627451, 1)

[node name="left" type="ColorRect" parent="covers"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 160.0
offset_bottom = 184.0
grow_vertical = 2
color = Color(0.1254902, 0.03137255, 0.08627451, 1)

[node name="right" type="ColorRect" parent="covers"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_right = 224.0
offset_bottom = 184.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.1254902, 0.03137255, 0.08627451, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="covers"]
libraries = {
&"": SubResource("AnimationLibrary_msh13")
}

[connection signal="mouse_entered" from="start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="start" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="options" to="." method="_on_options_mouse_entered"]
[connection signal="mouse_exited" from="options" to="." method="_on_options_mouse_exited"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="exit" to="." method="_on_exit_mouse_exited"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
